app_stack.yaml
Description: 'Deploys an APP stack for the CRUD Application'
Parameters:
  AppAMI:
    Type: String
    Default: ''
    Description: AMI of the CRUD App
  VPCCloudformationStack:
    Type: String
    Default: ''
    Description: 'Please enter the name of the VPC stack'
  KeyName:
    Type: String
    Description: Enter the key name for resource access.
Resources:
  APPELBCLASSIC:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties: 
      Subnets:
        - {'Fn::ImportValue': !Sub '${VPCCloudformationStack}-PublicSubnetA'}
        - {'Fn::ImportValue': !Sub '${VPCCloudformationStack}-PublicSubnetB'}
      CrossZone: true
      HealthCheck:
        Target: 'TCP:3000'
        HealthyThreshold: '5'
        UnhealthyThreshold: '3'
        Interval: '10'
        Timeout: '5'
      Listeners:
        - LoadBalancerPort: '80'
          InstancePort: '3000'
          Protocol: HTTP
      Scheme: internet-facing
      SecurityGroups: 
        - !Ref SGAPPELBCLASSIC
      Tags:
        - Key: Name
          Value:
            !Join
              - '-'
              - - !Ref AWS::StackName
                - 'CRUD'
  LCAPPCRUD:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Properties:
      LaunchConfigurationName:
        !Join
          - '-'
          - - 'lc'
            - 'app'
            - !Ref AppAMI
      KeyName:
        Ref: KeyName
      ImageId: !Ref AppAMI
      SecurityGroups:
        - !Ref SGAPPEC2
      InstanceType: t2.micro
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 10
            Encrypted: true
      AssociatePublicIpAddress: 'false'
  ASGAPPCRUD:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      AutoScalingGroupName:
        !Join
          - '-'
          - - 'asg'
            - 'crud'
            - !Ref AppAMI
      VPCZoneIdentifier:
        - {'Fn::ImportValue': !Sub '${VPCCloudformationStack}-PrivateSubnetA'}
        - {'Fn::ImportValue': !Sub '${VPCCloudformationStack}-PrivateSubnetB'}
      LaunchConfigurationName: !Ref LCAPPCRUD
      MinSize: 2
      MaxSize: 4
      LoadBalancerNames:
        - !Ref APPELBCLASSIC
      DesiredCapacity: 2
      HealthCheckType: ELB
      HealthCheckGracePeriod: 300
      Tags:
        - Key: Name
          Value:
            !Join
              - '-'
              - - 'ec2'
                - !Ref AWS::StackName
                - 'crud'
          PropagateAtLaunch: 'true'
    UpdatePolicy:
      AutoScalingReplacingUpdate:
        WillReplace: 'true'
  SGAPPELBCLASSIC: 
    Type: 'AWS::EC2::SecurityGroup'
    Properties: 
      GroupDescription: Load Balancer incoming Traffic group
      SecurityGroupIngress: 
        - IpProtocol: tcp 
          FromPort: 80 
          ToPort: 80
          CidrIp: 119.74.125.93/32 
      VpcId: {'Fn::ImportValue': !Sub '${VPCCloudformationStack}-VPCID'} 
      Tags: 
        - Key: Name 
          Value:  
            !Join 
              - '-' 
              - - 'lb' 
                - !Ref AWS::StackName 
                - 'sg'
  SGAPPEC2: 
    Type: 'AWS::EC2::SecurityGroup' 
    Properties: 
      GroupDescription: EC2 Incoming traffic from Load Balancer 
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          SourceSecurityGroupId: !GetAtt SGAPPELBCLASSIC.GroupId 
      VpcId: {'Fn::ImportValue': !Sub '${VPCCloudformationStack}-VPCID'} 
      Tags: 
        - Key: Name 
          Value:  
            !Join 
              - '-' 
              - - 'sg' 
                - !Ref AWS::StackName 
                - 'ec2'
